========================================
Change log for tool_fixlinks
========================================

2022-01-23 (13)
 - remove duplicate copy of method to create linebreak

2022-01-22 (12)
 - add Boost-compatible line breaks in main form

2022-01-22 (11)
 - add message to CHANGES.txt

2022-01-22 (11)
 - add line break in Boost themes

2021-09-14 (10)
 - admin_tool modify markdown syntax for long help messages (for compatability with Moodle 3.11)

2019-11-10 (09)
 - standardize layout and spelling in CHANGES.txt

2017-06-15 (07)
 - mimic 'build_node_path' to encode directory paths in Moodle >= 3.1

2016-08-24 (05)
 - standardize 'die;' to 'die();'

2016-03-18 (04)
 - move this item to Plugins -> Admin tools in navigation menu

2016-03-16 (03)
 - fix name of constructor method in tool_fixlinks_form class

2016-02-01 (02)
 - use moodleform::construct() when available for compatability with Moodle >= 3.0

2015-12-02 (01)
 - prevent timeout and disable activities that cannot yet be fixed

2015-04-01 (00)
 - initial import of fixlinks files