@@ -28,5 +28,5 @@ defined('MOODLE_INTERNAL') || die();
 $plugin->component = 'tool_fixlinks';
 $plugin->maturity  = MATURITY_BETA;
 $plugin->requires  = 2011120500; // Moodle >= 2.2
-$plugin->version   = 2022012313;
-$plugin->release   = '2022-01-23 (13)';
+$plugin->version   = 2024020215;
+$plugin->release   = '2024-02-02 (15)';
